objects/Customer_Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>Executive_Responsiveness__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Responsiveness of your SunPower Account Executive to your questions or concerns</inlineHelpText>
        <label>Executive Responsiveness</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expectation_Actualization_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Expectation Actualization Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expectation_Actualization__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with SunPower‘s ability to deliver the project according to the original set expectations? (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Expectation Actualization</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expectation_Setting_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Expectation Setting Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expectation_Setting__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with how SunPower Sales set your expectations on the Financing, Design, Construction, and Commissioning phases (E.G., What would be completed and when)? (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Expectation Setting</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Time__c</fullName>
        <inlineHelpText>Thinking of the expectations set by your SunPower Dealer, how was the actual time from contract signing until your system was first turned on and producing power?</inlineHelpText>
        <label>Expected Project Time</label>
        <picklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Comments__c</fullName>
        <label>Family Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Comments__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Is there anything else you would like to discuss?</inlineHelpText>
        <label>Final Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_benefit_to_Expect__c</fullName>
        <inlineHelpText>I know what to expect in terms of annual financial benefit and savings on my electric bill.</inlineHelpText>
        <label>Financial benefit to Expect</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Options__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Financing options available for SunPower systems</inlineHelpText>
        <label>Financing Options</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Followup_Requested_w_Construction_Group__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Do you require further discussion with a representative of the construction group (to provide further feedback)?</inlineHelpText>
        <label>Follow-up Requested w Construction Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Frequency of Energy Production Performance Reports</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friends_Referred__c</fullName>
        <inlineHelpText>How many friends or family members have you already referred to a SunPower solar system?</inlineHelpText>
        <label>Friends Referred</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Ideas__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>We’ve outlined some ideas for expanding our relationship in the future. Are there any items we need to address in order to move that vision forward?</inlineHelpText>
        <label>Future Ideas</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Years__c</fullName>
        <inlineHelpText>How long do you expect to live at the house where you have recently installed a SunPower solar system?</inlineHelpText>
        <label>Future Years</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 15 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - The house with solar is not my primary residence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_to_Maintain__c</fullName>
        <inlineHelpText>I know how to maintain the system (wash panels, etc.).</inlineHelpText>
        <label>How to Maintain</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_to_Monitor__c</fullName>
        <inlineHelpText>I know how to check whether the system is working.</inlineHelpText>
        <label>How to Monitor</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improve_Comments_EPC__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Where do you think we can improve?</inlineHelpText>
        <label>Improve Comments - EPC</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improve_Comments__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Workstream
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Where can SunPower improve?</inlineHelpText>
        <label>Improve Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Benefit__c</fullName>
        <inlineHelpText>The initial savings or financial benefit I have seen so far are what I expected.</inlineHelpText>
        <label>Initial Benefit</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Age__c</fullName>
        <inlineHelpText>What is your age?</inlineHelpText>
        <label>Install Age</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Process__c</fullName>
        <inlineHelpText>Dealer&apos;s overall management of the project</inlineHelpText>
        <label>Installation Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <formula>Opportunity_ID__r.Installer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intallation_Time_Length__c</fullName>
        <label>Intallation Time Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Resolution_Effectiveness__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey 
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Issue Resolution Effectiveness</inlineHelpText>
        <label>Issue Resolution Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Resolution_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Issue Resolution Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Resolution__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the speed and effectiveness for resolving problems and issues during construction? (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Issue Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_and_Experience__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the following aspects of the Purchasing &amp; Contract Negotiations phase?  Starting with the Knowledge and experience of your SunPower Account Executive.</inlineHelpText>
        <label>Knowledge and Experience</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Placed_In_Service__c</fullName>
        <formula>IF( Opportunity_ID__r.Lease_Placed_in_Service__c == True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Placed In Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Terms__c</fullName>
        <inlineHelpText>I clearly understand the terms of my lease.</inlineHelpText>
        <label>Lease Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_of_Subcontractors__c</fullName>
        <description>Commercial: 
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Management of subcontractors</inlineHelpText>
        <label>Management of Subcontractors</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matches_Design__c</fullName>
        <inlineHelpText>The installation matches my approved design.</inlineHelpText>
        <label>Matches Design</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Materials provided by SunPower to help you understand and communicate the advantages of SunPower to internal stakeholders</inlineHelpText>
        <label>Materials</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Meeting milestone and delivery schedules</inlineHelpText>
        <label>Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestones_Emails__c</fullName>
        <inlineHelpText>I received useful emails from SunPower throughout the process keeping me informed of project milestones.</inlineHelpText>
        <label>Milestones Emails</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Influenced__c</fullName>
        <inlineHelpText>What most affected your decision to get solar in general?</inlineHelpText>
        <label>Most Influenced</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Most_Influenced_for_SPWR__c</fullName>
        <inlineHelpText>What most affected your decision to lease a SunPower system in particular?</inlineHelpText>
        <label>Most Influenced for SPWR</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operation_and_Maintenance_Renewal__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How likely would you be you to renew your operation and maintenance contract(s) with SunPower if that decision needed to be made today? (0 - Extremely unlikely, 10 - Extremely likely)</inlineHelpText>
        <label>Operation and Maintenance Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operations_Maintenance_Comments__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Please enter any additional comments about Operations and Maintenance.</inlineHelpText>
        <label>Operations/Maintenance Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Id to which Installation Survey is linked</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Survey Results</relationshipLabel>
        <relationshipName>Customer_Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lease__c</fullName>
        <formula>IF(Opportunity_ID__r.Lease__c == True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>Case 00404402 Request by Kristel Wickham</description>
        <formula>Opportunity_ID__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>Case 00404402 Request by Kristel Wickham</description>
        <formula>Opportunity_ID__r.Owner.FirstName+ &quot; &quot; +  Opportunity_ID__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>if (Opportunity_ID__r.RecordTypeId ==&apos;0128000000037dl&apos;,&apos;Commercial&apos;,
if (Opportunity_ID__r.RecordTypeId ==&apos;01280000000PzRR&apos;,&apos;Components&apos;,
if (Opportunity_ID__r.RecordTypeId ==&apos;01280000000Q1WJ&apos;,&apos;Development&apos;,
if (Opportunity_ID__r.RecordTypeId ==&apos;0128000000037dm&apos;,&apos;Home Owner&apos;,
if (Opportunity_ID__r.RecordTypeId ==&apos;01280000000PzRS&apos;,&apos;Systems&apos;,&apos;Unidentified&apos;)))))</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Project_Management__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Overall Project Management</inlineHelpText>
        <label>Overall Project Management</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM_Satisfaction_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>PM Satisfaction Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>